--- a/folio.html
+++ b/folio.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portofolio</title>
     <link rel="stylesheet" href="style.css">
-    <link href='https://boxicons.com/' rel='stylesheet'>
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <header class="header">
-    <a href="#home" class="logo">Daiva Sindu<span>Balakosa</span></a>
+    <a href="#home" class="logo">Daiva Sindu <span>Balakosa</span></a>
 
     <i class='bx bx-menu' id="menu-icon"></i>
 
     <nav class="navbar">
         <a href="#home" class="active">Home</a>
         <a href="#education" class="active">Education</a>
-        <a href="#exp" class="active">Experience</a>
+        <a href="#services" class="active">Experience</a>
 
     </nav>
     </header>
@@ -38,31 +38,61 @@
         </div>
     </div>
     <div class="home-img">
-        <img src="download.jpeg" alt="">
+        <img src="Screenshot 2024-09-02 181024.png" alt="">
     </div>
 </section>
 
 <section class="education" id="education">
     <h2 class="heading">Education</h2>
+
     <div class="timeline-items">
+
         <div class="timeline-item">
-            <div class="timeline-data">2020</div>
+            <div class="timeline-dot"></div>
+            <div class="timeline-date">2020</div>
             <div class="timeline-content">
                 <h3>SMA</h3>
                 <p>Masuk kejurusan ipa dan mulai tertarik mejadi programer setelah melihat peluang di bidang tersebut</p>
             </div>
         </div>
 
-        <div class="timeline-items">
-            <div class="timeline-item">
-                <div class="timeline-data">2023</div>
+        <div class="timeline-item">
+            <div class="timeline-dot"></div>
+                <div class="timeline-date">2023</div>
                 <div class="timeline-content">
                     <h3>Universitas</h3>
                     <p>mengambil Jurusan Teknologi Informatika untuk mengenal lebih jauh dalam dunia programing</p>
                 </div>
-            </div>
+            
     </div>
 </section>    
+
+<section class="services" id="services">
+    <h2 class="services-container">Experience</h2>
+
+    <div class="div service-container">
+        <div class="div service-box">
+            <div class="div service-info">
+                <h4>Web disainer</h4>
+                <p>berpengalaman dalam membuat disain wesite untuk portofolio,cv,DLL</p>
+            </div>
+        </div>
+
+        <div class="div service-box">
+            <div class="div service-info">
+                <h4>Back-End Programing</h4>
+                <p>berpengalaman dalam membuat DataBase, pembuatan server kerja, dan perawatan server</p>
+            </div>
+        </div>
+
+        <div class="div service-box">
+            <div class="div service-info">
+                <h4>Mobile Developer</h4>
+                <p>berpengalaman dalam membuat aplikasi belanja, game,DLL</p>
+            </div>
+        </div>
+    </div>
+</section>
 
     <script src="script.js"></script>
 </body>
